tests/paczka1/fuzzy1/59599272.err
Error in line 9: qgQxQ A29 37,8
Error in line 11: A762 A156 13,1
Error in line 2: 1CaLX A762 7,2
Error in line 30: A762 S129 35,6
